--- a/hirmumaja/style.css
+++ b/hirmumaja/style.css
@@ -1,80 +1,7 @@
+/*siin on stiilid mis kuuluvad kõik lehed */
 
-/*body {*/
-/*    background-color: #1a1a1a;*/
-/*    color: #fff;*/
-/*    font-family: 'Merriweather', serif; !* Изменен шрифт *!*/
-
-/*}*/
-/*body a{*/
-/*    color: darkred;*/
-/*}*/
-
-/*.koduleht-a {*/
-/*    text-decoration: none;*/
-/*    font-size: 50px;*/
-/*    color: indigo;*/
-
-
-/*}*/
-/*.koduleht-main{*/
-/*    font-size: 20px;*/
-/*    padding-left: 20px;*/
-/*    padding-right: 20px;*/
-
-/*}*/
-
-
-/*header{*/
-/*    background-image: url('pildid/bg2.jpeg');*/
-
-/*}*/
-/*header h1{*/
-/*    padding-left: 60px;*/
-
-/*}*/
-/*header h1, header nav {*/
-/*    display: inline-block; !* Размещаем элементы на одной линии *!*/
-/*}*/
-/*.tervitamine, .kirjeldus div{*/
-/*    text-align: center;*/
-/*}*/
-
-/*.tervitamine{*/
-/*    font-family: 'Creepster', cursive; !* Применяем шрифт Creepster *!*/
-/*}*/
-
-/*nav {*/
-/*    margin-top: 30px;*/
-/*    float: right;*/
-
-/*}*/
-
-/*!* Добавленные стили для навигационного меню *!*/
-/*header nav ul {*/
-/*    list-style-type: none; !* Убираем маркеры у списка *!*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*}*/
-
-/*header nav ul li {*/
-/*    display: inline-block; !* Размещаем пункты меню горизонтально *!*/
-
-/*}*/
-
-/*header nav ul li a {*/
-/*    display: block; !* Превращаем ссылки в блочные элементы *!*/
-/*    padding: 10px 20px; !* Задаем отступы для пунктов меню *!*/
-/*    text-decoration: none;*/
-/*    color: black; !* Цвет текста ссылок *!*/
-/*    width: 150px; !* Задаем ширину *!*/
-/*    font-size: 20px; !* Устанавливаем размер шрифта *!*/
-/*}*/
-
-/*header nav ul li a:hover {*/
-/*    background-color: #f0f0f0; !* Цвет фона при наведении на ссылку *!*/
-/*}*/
 body {
-    background: linear-gradient(to right, #000000, #333333); /* Градиент от черного к темно-серому */
+    background: linear-gradient(to right, #000000, #333333);
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -84,6 +11,7 @@ body {
 }
 
 .konteiner {
+    /* põhikonteineri stiilid  */
     width: 80%;
     margin: 0 auto;
     padding: 0 20px;
@@ -139,35 +67,32 @@ footer {
 }
 
 input[type="submit"] {
-    background-color: #ff4500; /* Оранжевый цвет кнопки */
-    color: #fff; /* Белый текст на кнопке */
-    padding: 10px 20px; /* Отступы внутри кнопки */
-    border: none; /* Убираем границу кнопки */
-    border-radius: 5px; /* Закругляем углы кнопки */
-    cursor: pointer; /* Показываем, что кнопка кликабельна */
-    font-size: 16px; /* Размер текста на кнопке */
+    background-color: #ff4500;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
 }
 
 input[type="submit"]:hover {
-    background-color: #ff6a00; /* Изменяем цвет кнопки при наведении */
+    background-color: #ff6a00;
 }
 
 input[type="number"],input[type="text"], input[type="password"]{
-    width: 200px; /* Ширина поля ввода */
-    padding: 10px; /* Внутренние отступы */
-    border: 1px solid #ccc; /* Граница поля ввода */
-    border-radius: 5px; /* Скругление углов */
-    font-size: 16px; /* Размер шрифта */
-    outline: none; /* Убираем контур фокуса */
+    width: 200px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    outline: none;
 }
 
 input[type="number"],input[type="text"], input[type="password"]:hover,
 input[type="number"],input[type="text"], input[type="password"]:focus {
-    border-color: #ff4500; /* Цвет границы при наведении и фокусе */
+    border-color: #ff4500;
 }
-
-
-
 
 table {
     width: 100%;
@@ -178,11 +103,11 @@ table {
 th, td {
     padding: 10px;
     text-align: left;
-    border-bottom: 1px solid #555; /* Горизонтальная линия между строками */
+    border-bottom: 1px solid #555;
 }
 
 th {
-    background-color: #555; /* Цвет фона заголовка */
+    background-color: #555;
 }
 a {
     text-decoration: none;
@@ -192,6 +117,9 @@ a:hover{
     text-decoration: underline;
 
 }
+
+/*mitteaktiivse nupu välimuse stiil*/
+
 input[type="submit"]:disabled {
     background-color: #ccc;
     color: #666;
